# PyReactorKit

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: 0d.ipynb  bypass.ipynb  pfr_heated.ipynb  pfr_simple.ipynb
src/pyreactorkit/: __init__.py  display.py  util.py
src/pyreactorkit/models/: __init__.py  base.py  bypass.py  bypass_mixing.py  contraction.py  coresize.py  diffusion_core.py  diffusion_model.py  equilibrium.py  exchange.py  network.py  radial.py  recirculating.py  recirculating_simple.py  recirculating_simple2.py  split.py
